# shopextract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_extraction.py  catalog_analysis.py  competitive_analysis.py  marketplace_feed.py  price_comparison.py  price_monitor.py
notebooks/: demo.ipynb  demo_executed.ipynb  sample_data.json  shopextract_demo.ipynb
src/shopextract/: __init__.py  _detect.py  _discover.py  _extract.py  _filters.py  _models.py  _normalize.py  _quality.py  cli.py
src/shopextract/analyze/: __init__.py  competitive.py  stats.py
src/shopextract/compare/: __init__.py  catalog.py  match.py  price.py
src/shopextract/export/: __init__.py  _csv.py  _feed.py  _json.py
src/shopextract/extractors/: __init__.py  _browser.py  _markdown_price.py  _opengraph.py  _schema_org.py  css.py  feed.py  llm.py  magento.py  shopify.py  unified.py  woocommerce.py
src/shopextract/monitor/: __init__.py  changes.py  snapshot.py  watch.py
src/shopextract/validate/: __init__.py  duplicates.py  images.py  marketplace.py
tests/: conftest.py  test_analyze.py  test_compare.py  test_detect.py  test_discover.py  test_export.py  test_extract.py  test_filters.py  test_models.py  test_monitor.py  test_normalize.py  test_quality.py  test_validate.py
tests/fixtures/: shopify_products.json  woocommerce_products.json
