[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopextract"
version = "0.1.1"
description = "Extract, compare, and monitor product data from any e-commerce store"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Umer Khan"}]
keywords = ["ecommerce", "scraping", "product-data", "price-comparison", "shopify", "woocommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "crawl4ai>=0.6",
    "defusedxml>=0.7",
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "litellm>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22", "build>=1.0"]

[project.scripts]
shopextract = "shopextract.cli:main"

[project.urls]
Homepage = "https://github.com/umerkhan95/shopextract"
Repository = "https://github.com/umerkhan95/shopextract"
Issues = "https://github.com/umerkhan95/shopextract/issues"
Documentation = "https://github.com/umerkhan95/shopextract#readme"

[tool.pytest.ini_options]
asyncio_mode = "auto"
